--- a/style.css
+++ b/style.css
@@ -94,3 +94,19 @@ ul li.checked{
 ul li.checked::before{
     background-image: url(check-box-unchecked-1.svg);
 }
+ul li span{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+ul li span:hover{
+    background: #ff5566;
+    color: #fff;
+}
